--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,10 @@
 
   <body>
     <%= yield %>
+  <% if current_user %>
+  <%= button_to 'Logout', logout_path, method: :delete, data: { confirm: 'Are you sure you want to logout?' } %>
+<% end %>
+
+
   </body>
 </html>
