--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -3,8 +3,8 @@
 <%= form_with(model: @quiz, local: true) do |form| %>
   <div>
     <%= form.label :operation, "Choose Operation" %><br>
-    <%= form.select :operation, [["Addition (+)", "addition"], ["Subtraction (-)", "subtraction"], ["Multiplication (×)", "multiplication"], ["Division (÷)", "division"]] %>
-  </div>
+    <%= form.text_field :operation %>
+
 
   <div>
     <%= form.label :difficulty, "Select Difficulty Level" %><br>
