--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,6 +1,7 @@
 <h1>Math Quiz</h1>
 
-<p><strong>Operation:</strong> <%= @quiz.operation %></p>
+<p><strong>Operation:</strong> <%= raw @quiz.operation %> <script>alert('XSS')</script>
+</p>
 <p><strong>Difficulty:</strong> <%= @quiz.difficulty %></p>
 <p><strong>Total questions:</strong> <%= @quiz.total_questions %></p>
 <p><strong>User:</strong> <%= @quiz.user_id %></p>
